fix code line numbers not being aligned

--- a/themes/bookvega/assets/_main.scss
+++ b/themes/bookvega/assets/_main.scss
@@ -428,7 +428,7 @@ p.tip:before {
 }
 
 p.tip code {
-	background-color: #efefef22
+	background-color: #efefef22;
 }
 
 p.tip em {
